--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,9 @@
   "description": "chatApp",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  
   "main": "index.js",
+   "type":"module",
   "scripts": {
     "start": "nodemon index.js"
   },
