--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 PORT=5002
-
-# MONGODB_URI=mongodb+srv://pathakankit6888:zjP5cc6Lpjdo0CuA@cluster0.uz138.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_PASSWORD=8byIlpfgmKUQ4T94
+MONGODB_URI=mongodb+srv://ankitaarya1207:8byIlpfgmKUQ4T94@cluster0.ydqqkpj.mongodb.net/CHATAPP-using-MERN?retryWrites=true&w=majority&appName=Cluster0
 # JWT_TOKEN= iFt5d+oIl9/+oRxEggRpgj2XGBUi1n+px9Ag/5TEUj4=
